<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layoutDirection="inherit">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <TextView
                android:id="@+id/title_row_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slider_header_string_model"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="10sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <TextView
                android:id="@+id/title_row_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slider_header_string_sn"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="10sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <TextView
                android:id="@+id/title_row_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slider_header_string_pn"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_pn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="10sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>