<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <ImageView
                android:id="@+id/img_row_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_img_battery_status"
                app:tint="@color/icon_color" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_running_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_string_running_status"
                android:textSize="@dimen/title_text_size" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_running_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="@dimen/output_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <ImageView
                android:id="@+id/img_row_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_img_battery_io"
                app:tint="@color/icon_color" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_charge_and_discharge_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_string_charge_and_discharge_power"
                android:textSize="@dimen/title_text_size" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_charge_and_discharge_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="@dimen/output_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <ImageView
                android:id="@+id/img_row_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_img_battery_in"
                app:tint="@color/icon_color" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_current_day_charge_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_string_current_day_charge_capacity"
                android:textSize="@dimen/title_text_size" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_current_day_charge_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="@dimen/output_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/table_space_height">

            <ImageView
                android:id="@+id/img_row_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_img_battery_out"
                app:tint="@color/icon_color" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_current_day_discharge_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_string_current_day_discharge_capacity"
                android:textSize="@dimen/title_text_size" />

            <Space
                android:layout_width="@dimen/table_space_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out_txt_current_day_discharge_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_placeholder_text"
                android:textSize="@dimen/output_text_size" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>